// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should do the initial traversal correctly 1`] = `
Object {
  "dependencies": Map {
    "/bundle" => Object {
      "dependencies": Map {
        "foo" => Object {
          "absolutePath": "/foo",
          "data": Object {
            "data": Object {
              "asyncType": null,
              "locs": Array [],
            },
            "name": "foo",
          },
        },
      },
      "getSource": [Function],
      "inverseDependencies": Array [],
      "output": Array [
        Object {
          "data": Object {
            "code": "// code",
            "lineCount": 1,
            "map": Array [],
          },
          "type": "js/module",
        },
      ],
      "path": "/bundle",
    },
    "/foo" => Object {
      "dependencies": Map {
        "bar" => Object {
          "absolutePath": "/bar",
          "data": Object {
            "data": Object {
              "asyncType": null,
              "locs": Array [],
            },
            "name": "bar",
          },
        },
        "baz" => Object {
          "absolutePath": "/baz",
          "data": Object {
            "data": Object {
              "asyncType": null,
              "locs": Array [],
            },
            "name": "baz",
          },
        },
      },
      "getSource": [Function],
      "inverseDependencies": Array [
        "/bundle",
      ],
      "output": Array [
        Object {
          "data": Object {
            "code": "// code",
            "lineCount": 1,
            "map": Array [],
          },
          "type": "js/module",
        },
      ],
      "path": "/foo",
    },
    "/bar" => Object {
      "dependencies": Map {},
      "getSource": [Function],
      "inverseDependencies": Array [
        "/foo",
      ],
      "output": Array [
        Object {
          "data": Object {
            "code": "// code",
            "lineCount": 1,
            "map": Array [],
          },
          "type": "js/module",
        },
      ],
      "path": "/bar",
    },
    "/baz" => Object {
      "dependencies": Map {},
      "getSource": [Function],
      "inverseDependencies": Array [
        "/foo",
      ],
      "output": Array [
        Object {
          "data": Object {
            "code": "// code",
            "lineCount": 1,
            "map": Array [],
          },
          "type": "js/module",
        },
      ],
      "path": "/baz",
    },
  },
  "entryPoints": Set {
    "/bundle",
  },
  "importBundleNames": Set {},
  "transformOptions": Object {
    "dev": false,
    "hot": false,
    "minify": false,
    "platform": null,
    "runtimeBytecodeVersion": null,
    "type": "module",
    "unstable_transformProfile": "default",
  },
}
`;

exports[`should not traverse past the initial module if \`shallow\` is passed 1`] = `
Object {
  "dependencies": Map {
    "/bundle" => Object {
      "dependencies": Map {
        "foo" => Object {
          "absolutePath": "/foo",
          "data": Object {
            "data": Object {
              "asyncType": null,
              "locs": Array [],
            },
            "name": "foo",
          },
        },
      },
      "getSource": [Function],
      "inverseDependencies": Array [],
      "output": Array [
        Object {
          "data": Object {
            "code": "// code",
            "lineCount": 1,
            "map": Array [],
          },
          "type": "js/module",
        },
      ],
      "path": "/bundle",
    },
  },
  "entryPoints": Set {
    "/bundle",
  },
  "importBundleNames": Set {},
  "transformOptions": Object {
    "dev": false,
    "hot": false,
    "minify": false,
    "platform": null,
    "runtimeBytecodeVersion": null,
    "type": "module",
    "unstable_transformProfile": "default",
  },
}
`;
